tests/ui/tuple/tuple-index-out-of-bounds.stderr
error[E0609]: no field `2` on type `Point`
  --> $DIR/tuple-index-out-of-bounds.rs:7:12
   |
LL |     origin.2;
   |            ^ unknown field
   |
help: a field with a similar name exists
   |
LL |     origin.0;
   |            ~

error[E0609]: no field `2` on type `({integer}, {integer})`
  --> $DIR/tuple-index-out-of-bounds.rs:12:11
   |
LL |     tuple.2;
   |           ^ unknown field

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0609`.
